cmake_minimum_required(VERSION 3.10)
project(flight-planner)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 COMPONENTS Widgets WebEngineWidgets REQUIRED)
find_package(CURL REQUIRED)
include_directories(${CURL_INCLUDE_DIRS} include)
add_executable(flight-planner src/main.cpp resources/resources.qrc)
target_link_libraries(flight-planner Qt6::Widgets Qt6::WebEngineWidgets ${CURL_LIBRARIES})